--- a/README
+++ b/README
@@ -1,1 +1,8 @@
 Tumbalalaika music
+
+Thoughts:
+
+* v3 style is more dense and "crunchy", maybe good for choruses, especially final chorus
+* might be good to mix it up with something a bit ligher for the earlier choruses
+* for the verses, we want to be able to hear the solo, so something more open like new_v1 is better
+* that's all for now
