renamed and refactored sparse version

--- a/README
+++ b/README
@@ -6,3 +6,4 @@ Thoughts:
 * might be good to mix it up with something a bit ligher for the earlier choruses
 * for the verses, we want to be able to hear the solo, so something more open like new_v1 is better
 * that's all for now
+Chromatic descending
