--- a/README
+++ b/README
@@ -1,9 +1,7 @@
-Tumbalalaika music
+# Tumbalalaika music
 
-Thoughts:
+## Thoughts:
 
-* v3 style is more dense and "crunchy", maybe good for choruses, especially final chorus
+* dense1 style is more "crunchy", maybe good for choruses, especially final chorus
 * might be good to mix it up with something a bit ligher for the earlier choruses
-* for the verses, we want to be able to hear the solo, so something more open like new_v1 is better
-* that's all for now
-Chromatic descending
+* for the verses, we want to be able to hear the solo, so something more open like sparse1 is better
